Fixed overflow problem moving forward

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,7 +15,7 @@ canvas {
 }
 
 body {
-   height: 100vh;
+   // height: 100%;
    background: #222;
    display: flex;
    flex-direction: column;
@@ -25,7 +25,7 @@ body {
 
 .grid-container {
    background-color: #fafafa;
-   height: 100vh;
+   // height: 100vh;
    width: 100vw;
    display: grid;
    grid-template-columns: min-max(0, 1fr);
@@ -278,19 +278,32 @@ main {
                    DAILY TRAFFIC HALF CHART
   -------------------------------------------------- */
 .half-charts-wrapper {
-   //  ! WORKING ON DAILY TRAFFIC
+   margin-top: 10px;
    width: 100%;
    height: 600px;
    border: 2px solid red;
+}
+
+.daily-traffic-title {
+   margin-top: 10px;
+   margin-left: 20px;
 }
 
 /* --------------------------------------------------
                    MOBILE USERS HALF CHART
   -------------------------------------------------- */
 .mobile-users-container {
+   margin-top: 35px;
+   padding-bottom: 20px;
+   // padding-left: 20px;
    width: 100%;
-   height: 600px;
+   // height: auto;
    border: 2px solid red;
+}
+
+.mobile-users-title {
+   margin-top: 10px;
+   margin-left: 20px;
 }
 
 /* --------------------------------------------------
